# zhmiscellanygsudo

./: README.md  execution_termination_handler.py  setup.cfg
src/zhmiscellanygsudo/: __init__.py  _resource_files_lookup.py  _supportfuncs.py  admin_subprocess.py  resource_files_lookup.py
