[metadata]
name = zhmiscellanygsudo
version = 0.2.9
author = zh
author_email = imnotgivingmyemailjustaddmeondiscordmydiscordisz_h_@zh.com
description = A collection of python functions made by zh.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://discord.gg/ThBBAuueVJ
project_urls =
    Bug Tracker = https://github.com/zen-ham/zhmiscellanygsudo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    zhmiscellany>=0

package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src